--- a/core/templates/partials/servico3.html
+++ b/core/templates/partials/servico3.html
@@ -32,8 +32,9 @@
                     <div class="circle-border zoom-in">
                         <img class="img-circle" src="{%static 'images/verdeFlor.png' %}" alt="service 3">
                     </div>
-                    <h3 style="color: green;">Clean Code</h3>
-                    <p>We Create Modern And Powerful Html5 And CSS3 Code Easy For Read And Customize.</p>
+                    <h3 style="color: green;">Sustentabilidade</h3>
+                    <p> O Smart Traffic se adapta fluxo de tráfego em tempo real, reduzindo os tempos de espera e minimizando
+                        o consumo desnecessário de combustível e as emissões de poluentes</p>
                 </div>
             </div>
 
