--- a/core/templates/partials/equipe2.html
+++ b/core/templates/partials/equipe2.html
@@ -3,14 +3,14 @@
     <div class="triangle"></div>
     <div class="container">
         <div class="title">
-            <h1>Who We Are?</h1>
-            <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
+            <h1>Quem nós somos?</h1>
+            <p>Somos pseudos programadores, que sonham em ser bem sucedidos.</p>
         </div>
         <div class="row-fluid team">
             <div class="span4" id="first-person">
                 <div class="thumbnail">
-                    <img src="{%static 'images/Team1.png' %}" alt="team 1">
-                    <h3>John Doe</h3>
+                    <img src="{{membro1.foto.thumb.url}}" alt="team 1">
+                    <h3>{{membro1.nome}}</h3>
                     <ul class="social">
                         <li>
                             <a href="">
@@ -18,26 +18,26 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro1.github}}">
                                 <span class="icon-github-circled"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro1.linkedn}}">
                                 <span class="icon-linkedin-circled"></span>
                             </a>
                         </li>
                     </ul>
                     <div class="mask">
-                        <h2>Copywriter</h2>
-                        <p>When you stop expecting people to be perfect, you can like them for who they are.</p>
+                        <h2>{{membro1.cargo}}</h2>
+                        <p>{{membro1.bio}}</p>
                     </div>
                 </div>
             </div>
             <div class="span4" id="second-person">
                 <div class="thumbnail">
-                    <img src="{%static 'images/Team2.png' %}" alt="team 1">
-                    <h3>John Doe</h3>
+                    <img src="{{membro2.foto.thumb.url}}" alt="team 1">
+                    <h3>{{membro2.nome}}</h3>
                     <ul class="social">
                         <li>
                             <a href="">
@@ -45,26 +45,26 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro2.github}}">
                                 <span class="icon-github-circled"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro2.linkedn}}">
                                 <span class="icon-linkedin-circled"></span>
                             </a>
                         </li>
                     </ul>
                     <div class="mask">
-                        <h2>Designer</h2>
-                        <p>When you stop expecting people to be perfect, you can like them for who they are.</p>
+                        <h2>{{membro2.cargo}}</h2>
+                        <p>{{membro2.bio}}</p>
                     </div>
                 </div>
             </div>
             <div class="span4" id="third-person">
                 <div class="thumbnail">
-                    <img src="{%static 'images/Team3.png' %}" alt="team 1">
-                    <h3>John Doe</h3>
+                    <img src="{{membro3.foto.thumb.url}}" alt="team 1">
+                    <h3>{{membro3.nome}}</h3>
                     <ul class="social">
                         <li>
                             <a href="">
