Edições no template de membros

--- a/core/templates/partials/equipe2.html
+++ b/core/templates/partials/equipe2.html
@@ -72,19 +72,19 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro3.github}}">
                                 <span class="icon-github-circled"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="{{membro3.linkedn}}">
                                 <span class="icon-linkedin-circled"></span>
                             </a>
                         </li>
                     </ul>
                     <div class="mask">
-                        <h2>Photographer</h2>
-                        <p>When you stop expecting people to be perfect, you can like them for who they are.</p>
+                        <h2>{{membro3.cargo}}</h2>
+                        <p>{{membro3.bio}}</p>
                     </div>
                 </div>
             </div>
