--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -21,7 +21,7 @@
             {%include 'partials/portfolio.html'%}
         <!-- Portfolio section end -->
         <!-- About us section start -->
-            {%include 'partials/equipe2.html'%}
+            {%include 'partials/equipe.html'%}
         <!-- About us section end -->
 
 
