Adição do download do PDF

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -28,8 +28,9 @@
         <div class="section secondary-section">
             <div class="triangle"></div>
             <div class="container centered">
-                <p class="large-text">Elegance is not the abundance of simplicity. It is the absence of complexity.</p>
-                <a href="#" class="button">Purshase now</a>
+                <p class="large-text">"As tecnologias disruptivas seguem um padrão: 
+                primeiro são rejeitadas, depois são contestadas e, por fim, se tornam óbvias." - Peter Diamandis</p>
+                <a href="#" class="button">Voltar para o topo</a>
             </div>
         </div>
         <!-- Client section start -->
