--- a/core/templates/partials/equipe.html
+++ b/core/templates/partials/equipe.html
@@ -128,7 +128,8 @@
                     <p>Nele detalhamos melhor as funcionalidades e os objetivos do projeto e como ele impacta de maneira
                         positiva o dia-dia das pessoas, contribuindo para um trânsito mais eficiente e seguro
                     </p>
-                    <button class="button button-sp">Clique Aqui</button>
+                    <button class="button button-sp"><a href="{% static 'pdf/ProjetoPibitSemaforo.CORRIGIDO.FINAL(1).pdf' %}" download>Baixe Aqui</a>
+                        </button>
                 </div>
             </div>
         </div>
