Pequenas correções no menu e melhoria na model registros

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -18,7 +18,7 @@
         <!-- Service section end -->
         
         <!-- Portfolio section start -->
-            {%include 'partials/portfolio.html'%}
+            {%include 'partials/registro.html'%}
         <!-- Portfolio section end -->
         <!-- About us section start -->
             {%include 'partials/equipe.html'%}
@@ -48,7 +48,7 @@
 
 
         <!-- Contact section start -->
-            
+            {%include 'partials/contato.html'%}
         <!-- Contact section edn -->
         <!-- Footer section start -->
             {%include 'partials/rodape.html'%}
