--- a/core/templates/partials/base.html
+++ b/core/templates/partials/base.html
@@ -44,12 +44,12 @@
                     <div class="nav-collapse collapse pull-right">
                         <ul class="nav" id="top-navigation">
                             <li class="active"><a href="#home">Início</a></li>
-                            <li><a href="#service">Utilidade</a></li>
-                            <li><a href="#portfolio">Custos</a></li>
-                            <li><a href="#about">Etapas</a></li>
-                            <li><a href="#clients">Equipe</a></li>
-                            <li><a href="#price">Parcerias</a></li>
-                            <li><a href="#contact">Contato</a></li>
+                            <li><a href="#utilidade">Utilidade</a></li>
+                            <li><a href="#registro">Etapas</a></li>
+                            <li><a href="#about">sla</a></li>
+                            <li><a href="#equipe">Equipe</a></li>
+                         
+                            <li><a href="#contato">Contato</a></li>
                         </ul>
                     </div>
                     <!-- End main navigation -->
