--- a/core/templates/partials/equipe.html
+++ b/core/templates/partials/equipe.html
@@ -1,5 +1,5 @@
 {%load static%}
-<div class="section primary-section" id="about">
+<div class="section primary-section" id="equipe">
     <div class="triangle"></div>
     <div class="container">
         <div class="title">
