--- a/core/templates/partials/servico.html
+++ b/core/templates/partials/servico.html
@@ -1,5 +1,5 @@
 {%load static %}
-<div class="section primary-section" id="service">
+<div class="section primary-section" id="utilidade">
     <div class="container">
         <!-- Start title section -->
         <div class="title">
