--- a/core/templates/partials/rodape.html
+++ b/core/templates/partials/rodape.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+          <div class="">
             <div class="widget">
               <h3 class="footer-logo"><img src="{% static 'images/logoMelhorada2.png' %}" alt=""></h3>
               <div class="textwidget">
@@ -11,60 +11,124 @@
                   nossos objetos com o mesmo, esperamos que ele já esteja disponível para implementação imediata até 2024.
                 </p>
               </div>
-              <ul class="social">
-                <li>
-                    <a href="">
-                        <span class="icon-facebook-circled"></span>
-                    </a>
-                </li>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-            <h3 class="footer-titel">Products</h3>
-            <ul class="footer-link">
-              <li><a href="#">Tracking</a></li>
-              <li><a href="#">Application</a></li>
-              <li><a href="#">Resource Planning</a></li>
-              <li><a href="#">Enterprise</a></li>           
-              <li><a href="#">Employee Management</a></li>           
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-            <h3 class="footer-titel">Resources</h3>
-            <ul class="footer-link">
-              <li><a href="#">Payment Options</a></li>
-              <li><a href="#">Fee Schedule</a></li>
-              <li><a href="#">Getting Started</a></li>
-              <li><a href="#">Identity Verification</a></li>
-              <li><a href="#">Card Verification</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-            <h3 class="footer-titel">Contact</h3>
-            <ul class="address">
-              <li>
-                <a href="#"><i class="lni-map-marker"></i> 105 Madison Avenue - <br> Third Floor New York, NY 10016</a>
-              </li>
-              <li>
-                <a href="#"><i class="lni-phone-handset"></i> P: +84 846 250 592</a>
-              </li>
-              <li>
-                <a href="#"><i class="lni-envelope"></i> E: contact@uideck.com</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>  
-    </div> 
+
+              <div class="container">
+                <style>
+                  .coluna {
+                    display: inline-block;
+                    width: 33%;
+                    vertical-align: top;
+                  }
+                  .sla li a, p a{
+                    color: white;
+                  }
+                  .sla li a:hover {
+                    color: yellow;
+                  }
+                  .copyright-content {
+                     text-align: center;
+                    }
+                </style>
+                <div class="coluna">
+                  <h3 class="footer-titel">Emails de contato</h3>
+                  <ul class="sla" >
+                    <li><a href="mailto:weslleuwilker10@gmail.com">weslleywilker10@gmail.com</a></li>
+                    <li><a href="mailto:biel20cp@gmail.com">biel20cp@gmail.com</a></li>
+                    <li><a href="mailto:suzanasouza.caetano@gmail.com">suzanasouza.caetano@gmail.com</a></li>
+                    <li><a href="mailto:professor@wilsonamaral.com.br">professor@wilsonamaral.com.br</a></li>                    
+                  </ul>
+                </div>
+                <div class="coluna">
+                  <h3 class="footer-titel">Resources</h3>
+                  <ul class="sla">
+                    <li><a href="#">Payment Options</a></li>
+                    <li><a href="#">Fee Schedule</a></li>
+                    <li><a href="#">Getting Started</a></li>
+                    <li><a href="#">Identity Verification</a></li>
+                  </ul>
+                </div>
+                <div class="coluna">
+                  <h3 class="footer-titel"></h3>
+                  <ul class="sla">
+                    <li>
+                      <a href="#"><i class="lni-map-marker"></i> </a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="lni-phone-handset"></i> P: +84 846 250 592</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="lni-envelope"></i> E: contact@uideck.com</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              
+                      <!--Redes sociais-->
+                      <div class="container" style="margin-top: 60px;">
+                      <ul class="social">
+                        <li>
+                            <a href="">
+                                <span class="icon-facebook-circled"></span>        
+                            </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-vimeo-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-twitter-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-skype-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-gplus-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-pinterest-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-lastfm-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-linkedin-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-dribbble-circled"></span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="">
+                            <span class="icon-stumbleupon-circled"></span>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                      <!--Final redes sociais-->
     <div id="copyright">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="sla">
             <div class="copyright-content">
-              <p>Copyright © 2020 <a rel="nofollow" href="https://uideck.com">UIdeck</a> All Right Reserved</p>
+              <p>Acesse o projeto em <a href="https://github.com/WilkerMonky/SiteSmartTraffic">Github</a></p>
             </div>
           </div>
         </div>
       </div>
-    </div>   
+    </div>
+     
   </footer> 
