--- a/core/static/css/bootstrap.css
+++ b/core/static/css/bootstrap.css
@@ -8,8 +8,10 @@
  * Designed and built with all the love in the world by @mdo and @fat.
  */
 
-.clearfix {
-  *zoom: 1;
+ .clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .clearfix:before,
@@ -57,8 +59,6 @@ audio,
 canvas,
 video {
   display: inline-block;
-  *display: inline;
-  *zoom: 1;
 }
 
 audio:not([controls]) {
@@ -2995,6 +2995,7 @@ input[type="submit"].btn.btn-mini {
      -moz-box-shadow: none;
           box-shadow: none;
 }
+
 
 .btn-link {
   color: #0088cc;
