Adição do carrossel, correção de detalhes no menu e no rodapé

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,7 +3,7 @@
 
 {%block content%}
         <!-- Start home section -->
-       
+        {%include 'partials/home.html'%}
         <!-- End home section -->
 
         <!-- Service section start -->
