--- a/core/templates/partials/contato.html
+++ b/core/templates/partials/contato.html
@@ -2,7 +2,7 @@
 {%load static%}
 
 
-<div id="contact" class="contact">
+<div id="contato" class="contact">
     <div class="section secondary-section"  style="background-color: #181A1C; color: white;">
         <div class="container" style="color: white">
             <div class="title" style="color: white">
