--- a/core/templates/partials/equipe.html
+++ b/core/templates/partials/equipe.html
@@ -122,7 +122,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="span6">
+            <div class="span6" id="artigo">
                 <div class="highlighted-box center">
                     <h1>Leia nosso artigo</h1>
                     <p>Nele detalhamos melhor as funcionalidades e os objetivos do projeto e como ele impacta de maneira
