--- a/core/templates/partials/rodape.html
+++ b/core/templates/partials/rodape.html
@@ -25,6 +25,9 @@
                   .sla li a:hover {
                     color: yellow;
                   }
+                  .sla li i:hover{
+                    color: yellow;
+                  }
                   .copyright-content {
                      text-align: center;
                     }
@@ -39,25 +42,25 @@
                   </ul>
                 </div>
                 <div class="coluna">
-                  <h3 class="footer-titel">Resources</h3>
+                  <h3 class="footer-titel">Githubs</h3>
                   <ul class="sla">
-                    <li><a href="#">Payment Options</a></li>
-                    <li><a href="#">Fee Schedule</a></li>
-                    <li><a href="#">Getting Started</a></li>
+                    <li><a href="https://github.com/WilkerMonky">WilkerMonky</a></li>
+                    <li><a href="https://github.com/suzy-dev">suzy-dev</a></li>
+                    <li><a href="https://github.com/Biel-paiva">Biel-paiva</a></li>
                     <li><a href="#">Identity Verification</a></li>
                   </ul>
                 </div>
                 <div class="coluna">
-                  <h3 class="footer-titel"></h3>
+                  <h3 class="footer-titel">Número</h3>
                   <ul class="sla">
                     <li>
-                      <a href="#"><i class="lni-map-marker"></i> </a>
+                      <i class="lni-map-marker">+55 (61) 9 9902-7681</i>
                     </li>
                     <li>
-                      <a href="#"><i class="lni-phone-handset"></i> P: +84 846 250 592</a>
+                      <i class="lni-map-marker">+55 (61) 9 9396-8942</i>
                     </li>
                     <li>
-                      <a href="#"><i class="lni-envelope"></i> E: contact@uideck.com</a>
+                      <i class="lni-map-marker">+55 (61) 9 9660-3770</i>
                     </li>
                   </ul>
                 </div>
