--- a/core/templates/partials/servico3.html
+++ b/core/templates/partials/servico3.html
@@ -21,10 +21,11 @@
             <div class="span4">
                 <div class="centered service">
                     <div class="circle-border zoom-in">
-                        <img class="img-circle" src="{%static 'images/verdeFolha.png' %}" alt="service 2" />
+                        <img class="img-circle" src="{%static 'images/verdeFerramentas.png' %}" alt="service 2" />
                     </div>
-                    <h3 style="color: green;">Powerfull Theme</h3>
-                    <p>We Create Modern And Powerful Theme With Lots Animation And Features</p>
+                    <h3 style="color: green;">Manutenção Facilitada</h3>
+                    <p>Um sistema otimizado permite com que um semáforo opere com máxima eficiência, diminuindo a precisão
+                    de manutenções </p>
                 </div>
             </div>
             <div class="span4">
