--- a/core/templates/partials/base.html
+++ b/core/templates/partials/base.html
@@ -47,7 +47,7 @@
                             <li class="active"><a href="#home">Início</a></li>
                             <li><a href="#utilidade">Utilidade</a></li>
                             <li><a href="#registro">Etapas</a></li>
-                            <li><a href="#about">sla</a></li>
+                            <li><a href="#artigo">Artigo</a></li>
                             <li><a href="#equipe">Equipe</a></li>
                          
                             <li><a href="#contato">Contato</a></li>
