Versão Final(Até o momento) do site

--- a/core/templates/partials/home.html
+++ b/core/templates/partials/home.html
@@ -17,9 +17,9 @@
                 aumentar a segurança nas vias, diminuir a poluição do ar e facilitar a mobilidade urbana.
                 Com recursos avançados, como sensores e algoritmos inteligentes, os semáforos inteligentes
                  representam uma solução moderna e eficiente para o controle do tráfego nas cidades.</p>
-                <a href="#" class="da-link button">Read more</a>
+                <a href="#" class="da-link button">Leia mais</a>
                 <div class="da-img">
-                    <img src="{% static 'images/slideCarro.png' %}" width="320" alt="image02">
+                    <img src="{% static 'images/slideCaminhao.png' %}" width="320" alt="image02">
                 </div>
             </div>
             <!-- End first slide -->
@@ -33,7 +33,7 @@
                 minimizando riscos e melhorando a segurança nas interseções.</p>
                 <a href="#" class="da-link button">Leia mais</a>
                 <div class="da-img">
-                    <img src="{%static 'images/slideGuardaTransito.png' %}" alt="image01" width="320">                    
+                    <img src="{%static 'images/slideGuarda.png' %}" alt="image01" width="320">                    
                 </div>
             </div>
             <!-- End second slide -->
@@ -47,9 +47,9 @@
                 convencionais também não conseguem se adaptar às mudanças nas condições do trânsito, o que pode
                 levar a situações de risco. Esses problemas impactam negativamente a eficiência e a segurança do
                 sistema viário.</p>
-                <a href="#" class="da-link button">Read more</a>
+                <a href="#" class="da-link button">Leia mais</a>
                 <div class="da-img">
-                    <img src="images/Slider03.png" width="320" alt="image03">
+                    <img src="{% static 'images/slideSemaforo.png' %}" width="320" alt="image03">
                 </div>
             </div>
             <!-- Start third slide -->
