--- a/core/templates/partials/rodape.html
+++ b/core/templates/partials/rodape.html
@@ -35,7 +35,7 @@
                 <div class="coluna">
                   <h3 class="footer-titel">Emails de contato</h3>
                   <ul class="sla" >
-                    <li><a href="mailto:weslleuwilker10@gmail.com">weslleywilker10@gmail.com</a></li>
+                    <li><a href="mailto:weslleywilker10@gmail.com">weslleywilker10@gmail.com</a></li>
                     <li><a href="mailto:biel20cp@gmail.com">biel20cp@gmail.com</a></li>
                     <li><a href="mailto:suzanasouza.caetano@gmail.com">suzanasouza.caetano@gmail.com</a></li>
                     <li><a href="mailto:professor@wilsonamaral.com.br">professor@wilsonamaral.com.br</a></li>                    
@@ -47,7 +47,7 @@
                     <li><a href="https://github.com/WilkerMonky">WilkerMonky</a></li>
                     <li><a href="https://github.com/suzy-dev">suzy-dev</a></li>
                     <li><a href="https://github.com/Biel-paiva">Biel-paiva</a></li>
-                    <li><a href="#">Identity Verification</a></li>
+                    <li><a href="#">---------</a></li>
                   </ul>
                 </div>
                 <div class="coluna">
@@ -61,6 +61,9 @@
                     </li>
                     <li>
                       <i class="lni-map-marker">+55 (61) 9 9660-3770</i>
+                    </li>
+                    <li>
+                      <i class="lni-map-marker">--------------------</i>
                     </li>
                   </ul>
                 </div>
